--- a/src/main/resources/templates/AdminResult.html
+++ b/src/main/resources/templates/AdminResult.html
@@ -36,10 +36,16 @@
                     <a  th:href="@{/admin/allflight}"><i class="fa fa-columns"></i> <span class="nav-label">航班信息</span></a>
                 </li>
                 <li>
+                    <a  th:href="@{/admin/addflight}"><i class="fa fa-columns"></i> <span class="nav-label">添加航班信息</span></a>
+                </li>
+                <li>
                     <a  th:href="@{/admin/alluser}"><i class="fa fa-columns"></i> <span class="nav-label">所有用户</span></a>
                 </li>
                 <li>
                     <a  th:href="@{/admin/alltickets}"><i class="fa fa-columns"></i> <span class="nav-label">所有订单</span></a>
+                </li>
+                <li>
+                    <a  th:href="@{/admin/bookticket}"><i class="fa fa-columns"></i> <span class="nav-label">管理员订票</span></a>
                 </li>
                 <li>
                     <a  th:href="@{/admin/downloadexcel}"><i class="fa fa-columns"></i> <span class="nav-label">导出航班信息</span></a>
