--- a/src/main/resources/templates/UserBookTicket.html
+++ b/src/main/resources/templates/UserBookTicket.html
@@ -113,9 +113,12 @@
             </tr>
             </tbody>
         </table>
-        <div class="row J_mainContent" id="content-main">
-            <!--<iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index_v2.html" frameborder="0" data-id="index_v2.html" ></iframe>-->
+
+        <div class="footer navbar-fixed-bottom">
+            <div class="pull-right">&copy; 2015-2017 <a href=" " target="_blank">陈舜禹 iam24</a>
+            </div>
         </div>
+
     </div>
     <!--右侧部分结束-->
     <!--右侧边栏开始-->
