--- a/src/main/resources/templates/AllUser.html
+++ b/src/main/resources/templates/AllUser.html
@@ -33,13 +33,19 @@
             <ul class="nav" id="side-menu">
                 <li class="nav-header"/>
                 <li>
-                    <a  th:href="@{/admin/allflight}" ><i class="fa fa-columns"></i> <span class="nav-label">航班信息</span></a>
+                    <a  th:href="@{/admin/allflight}"><i class="fa fa-columns"></i> <span class="nav-label">航班信息</span></a>
+                </li>
+                <li>
+                    <a  th:href="@{/admin/addflight}"><i class="fa fa-columns"></i> <span class="nav-label">添加航班信息</span></a>
                 </li>
                 <li>
                     <a  th:href="@{/admin/alluser}"><i class="fa fa-columns"></i> <span class="nav-label">所有用户</span></a>
                 </li>
                 <li>
                     <a  th:href="@{/admin/alltickets}"><i class="fa fa-columns"></i> <span class="nav-label">所有订单</span></a>
+                </li>
+                <li>
+                    <a  th:href="@{/admin/bookticket}"><i class="fa fa-columns"></i> <span class="nav-label">管理员订票</span></a>
                 </li>
                 <li>
                     <a  th:href="@{/admin/downloadexcel}"><i class="fa fa-columns"></i> <span class="nav-label">导出航班信息</span></a>
@@ -100,6 +106,12 @@
             </tr>
             </tbody>
         </table>
+
+        <div class="footer navbar-fixed-bottom">
+            <div class="pull-right">&copy; 2015-2017 <a href=" " target="_blank">陈舜禹 iam24</a>
+            </div>
+        </div>
+
     </div>
     <!--右侧部分结束-->
     <!--右侧边栏开始-->
