--- a/src/main/resources/templates/importexcel.html
+++ b/src/main/resources/templates/importexcel.html
@@ -96,7 +96,7 @@
                 <label for="file">选择文件</label> <input type="file" class="form-control" name = "file" id="file" />
             </div>
             <div class="checkbox">
-            </div> <button type="submit" class="btn btn-default">Submit</button>
+            </div> <button type="submit" class="btn btn-sm btn-primary">提交</button>
         </form>
     </div>
     <!--右侧部分结束-->
